--- a/verl/trainer/config/ppo_megatron_trainer.yaml
+++ b/verl/trainer/config/ppo_megatron_trainer.yaml
@@ -28,7 +28,6 @@ actor_rollout_ref:
     use_dynamic_bsz: False
     use_torch_compile: True # False to disable torch compile
     clip_ratio: 0.2
-    clip_ratio_c: 3.0 # lower bound of the value for Dual-clip PPO from https://arxiv.org/pdf/1912.09729
     entropy_coeff: 0.001
     use_kl_loss: False # True for GRPO
     kl_loss_coef: 0.001 # for grpo
@@ -47,18 +46,18 @@ actor_rollout_ref:
       tensor_model_parallel_size: 4
       pipeline_model_parallel_size: 1
       virtual_pipeline_model_parallel_size: null # change VPP interface for parallelism tests
-      sequence_parallel: True
+      sequence_parallel: False
       use_distributed_optimizer: True
       seed: 1
     load_weight: True
     checkpoint:
-      contents: ['model', 'optimizer', 'extra']  # with 'hf_model' you can save whole model as hf format, now only use sharded model checkpoint to save space
+      contents: ['model', 'hf_model', 'optimizer', 'extra']  # with 'hf_model' you can save whole model as hf format, now only use sharded model checkpoint to save space
   ref:
     megatron:
       tensor_model_parallel_size: 4
       pipeline_model_parallel_size: 1
       virtual_pipeline_model_parallel_size: null # change VPP interface for parallelism tests
-      sequence_parallel: True
+      sequence_parallel: False
       use_distributed_optimizer: True
       seed: 1
     load_weight: True
@@ -103,7 +102,6 @@ actor_rollout_ref:
       do_sample: False # default eager for validation
 
 critic:
-  rollout_n: ${actor_rollout_ref.rollout.n}
   strategy: megatron
   optim:
     lr: 1e-5
@@ -122,7 +120,7 @@ critic:
     tensor_model_parallel_size: 4
     pipeline_model_parallel_size: 1
     virtual_pipeline_model_parallel_size: null # change VPP interface for parallelism tests
-    sequence_parallel: True
+    sequence_parallel: False
     use_distributed_optimizer: True
     seed: 1
   load_weight: True
@@ -137,7 +135,7 @@ critic:
     type: fixed
     kl_coef: 0.001
   checkpoint:
-    contents: ['model', 'optimizer', 'extra']  # with 'hf_model' you can save whole model as hf format, now only use sharded model checkpoint to save space
+    contents: ['model', 'hf_model', 'optimizer', 'extra']  # with 'hf_model' you can save whole model as hf format, now only use sharded model checkpoint to save space
 
 reward_model:
   enable: False
@@ -146,7 +144,7 @@ reward_model:
     tensor_model_parallel_size: 4
     pipeline_model_parallel_size: 1
     virtual_pipeline_model_parallel_size: null # change VPP interface for parallelism tests
-    sequence_parallel: True
+    sequence_parallel: False
     use_distributed_optimizer: True
     seed: 1
   model:
@@ -168,13 +166,10 @@ algorithm:
   gamma: 1.0
   lam: 1.0
   adv_estimator: gae
-  use_kl_in_reward: False
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
     type: fixed
     kl_coef: 0.001
-    horizon: 10000
-    target_kl: 0.1
 
 trainer:
   balance_batch: True
@@ -183,7 +178,7 @@ trainer:
   project_name: verl_examples
   experiment_name: gsm8k
   logger: ['console', 'wandb']
-  log_val_generations: 0
+  val_generations_to_log_to_wandb: 0
   nnodes: 1
   n_gpus_per_node: 8
   save_freq: -1
@@ -191,7 +186,6 @@ trainer:
   resume_mode: auto # or disable or resume_path if resume_from_path is set
   resume_from_path: null
   del_local_ckpt_after_load: False
-  val_before_train: True
   test_freq: 2
   critic_warmup: 0
   default_hdfs_dir: null
